# nano-vectordb-rs

./: Cargo.toml  README.md
.github/workflows/: code_checks.yml  post.yml
benches/: benchmark.rs
docs/src/: SUMMARY.md  basics.md  design_choices.md  implementation.md  intro.md  usage.md
examples/: advanced_usage.rs  basic_usage.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs  unit_tests.rs
