[package]
name = "nano-vectordb-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
rayon = "1.9"
serde_json = "1.0"
rand = "0.9.0"
bytemuck = "1.21.0"

[dev-dependencies]
tempfile = "3.3"
hf-hub = "0.4.1"
candle-core = "0.8.2"
candle-transformers = "0.8.2"
candle-nn = "0.8.2"
tokenizers = "0.21.0"
anyhow = "1.0"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
